--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,5 @@
 {
   "port" : 8080,
-  "aws_access_key" : "your-access-key",
-  "aws_secret_key" : "your-secret-key"
+  "aws_access_key" : "access-key",
+  "aws_secret_key" : "secret-key"
 }
