--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,6 @@
 {
   "port" : 8080,
-  "aws_access_key" : "access-key",
-  "aws_secret_key" : "secret-key"
+  "aws_access_key" : "aws_access_key",
+  "aws_secret_key" : "aws_secret_key",
+  "aws_bucket_name" : "aws_bucket_name"
 }
