--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
             <version>${vertx.version}</version>
         </dependency>
 
+        <!--<dependency>-->
+            <!--<groupId>io.vertx</groupId>-->
+            <!--<artifactId>vertx-auth-oauth2</artifactId>-->
+            <!--<version>${vertx.version}</version>-->
+        <!--</dependency>-->
+
 
         <dependency>
             <groupId>com.amazonaws</groupId>
